--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 .banner {
   width: cover;
   height: 45vh;
-  background-image: url(lobo.gif);
+  background-image: url(doweijdoweijd.png);
   background-size: cover;
   background-position: center;
   object-fit: cover;
