--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 .banner {
   width: cover;
   height: 45vh;
-  background-image: url('doweijdoweijd.png');
+  background-image: url('bgh.png');
   background-size: cover;
   background-position: center;
   object-fit: cover;
